discussion/kv_engine/124227/124227_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge remote-tracking branch 'couchbase/mad-hatter'

* couchbase/mad-hatter:
  MB-38356: Stream request for duplicate vbid stops streaming

Change-Id: I5b3d9dcf7164fd478748dbfb7d6cc2764e705635

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-03-25 17:17:45.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-03-25 17:40:42.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27087/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\producer.cc(559): error C2065: "streamId": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27087/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23159/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/producer.cc:559:35:
error: use of undeclared identifier "streamId"; did you mean "streamID"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23159/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1336/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:559:35: error: use of undeclared identifier "streamId"; did you mean "streamID"? [clang-diagnostic-error]
        updateStreamsMap(vbucket, streamId, s);
                                  ^~~~~~~~
                                  streamID
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:485:16: note: "streamID" declared here
    const auto streamID = filter.getStreamId();
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1336/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:559:35:
error: use of undeclared identifier "streamId"; did you mean "streamID"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1336/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2735/ : FAILURE

Compile error at [2020-03-25T17:22:45.311Z] ../kv_engine/engines/ep/src/dcp/producer.cc:559:35:
error: ?streamId? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2735/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10589/ : FAILURE

Compile error at [2020-03-25T17:33:10.724Z] ../kv_engine/engines/ep/src/dcp/producer.cc:559:35:
error: ?streamId? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10589/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1782/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2732/ : FAILURE

Compile error at [2020-03-25T17:26:24.399Z] ../kv_engine/engines/ep/src/dcp/producer.cc:559:35:
error: ?streamId? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2732/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2783/ : FAILURE

Compile error at [2020-03-25T17:19:51.034Z] ../kv_engine/engines/ep/src/dcp/producer.cc:559:35:
error: ?streamId? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2783/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25457/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
